windows: drop the powershell dependency for user directories, and unify CI on one shell (#624)
* windows: resolve user dirs via SHGetKnownFolderPath, not powershell + Add-Type

Every `bleep` invocation on Windows shelled out to
`powershell.exe -NoProfile -EncodedCommand` and compiled C# with `Add-Type`
at runtime, just to learn where its own cache and config directories live.
`Main._main` does it before anything else and the BSP server does it from
five more places, none of them memoized. That is the startup cost, and every
one of those spawns is a hard failure point: PowerShell in Constrained
Language Mode, AppLocker/WDAC, powershell.exe off PATH, a non-writable TEMP,
or a PSModulePath inherited from a parent pwsh that breaks Add-Type.

The fix already shipped in the code we depend on; it was just unreachable.
coursier-cache 2.1.24 carries an FFM implementation under
META-INF/versions/23, but that jar has no MANIFEST.MF at all — so no
`Multi-Release: true`, so the JDK never loads it. And WindowsJni gates the
JNI path off for java >= 23 precisely because it expects the multi-release
class to take over. Both escape hatches closed, PowerShell every time.

coursier split coursier-paths out in 2.1.25 with `Multi-Release: true` and
the impl under META-INF/versions/22, so JDK 22+ gets WindowsForeign.
Verified rather than assumed:

  JDK 21 -> coursier.paths.shaded.dirs.impl.WindowsPowerShell
  JDK 25 -> coursier.paths.shaded.dirs.impl.WindowsForeign

`coursier.cache.shaded.dirs` no longer exists in 2.1.25, so UserPaths had to
move regardless of any of this. `fromAppDirs` is now a lazy val.

Native image needs `foreign` reachability metadata for the two downcalls or
it aborts at runtime with MissingForeignRegistrationError — the same failure
class as #601, which stayed invisible until a real Windows user hit it.
Registered SHGetKnownFolderPath's descriptor (CLSIDFromString's shape is
already covered by the native-terminal file; matching is by shape, not name),
and `selftes